debpool (0.4.0) experimental; urgency=low

  * Created a new module to handle file parsing (NOT YET COMPLETE).
  * Minor code cleanup.

 -- Andres Mejia <mcitadel@gmail.com>  Fri, 24 Oct 2008 03:26:34 -0400

debpool (0.3.10) experimental; urgency=low

  * Handle conffile renaming as suggested in
    http://wiki.debian.org/DpkgConffileHandling.
  * Fix issue where we were trying to delete obsolete files twice.
  * Fix issue where changes files were not being obsoleted for packages that
    build only architecture independent binaries (such as debpool).

 -- Andres Mejia <mcitadel@gmail.com>  Fri, 17 Oct 2008 14:08:49 -0400

debpool (0.3.9) experimental; urgency=low

  * Allow binNMUs.
    + We basically only obsolete packages of the particular architecture when
      we're uploading.

 -- Andres Mejia <mcitadel@gmail.com>  Fri, 17 Oct 2008 02:47:03 -0400

debpool (0.3.8) experimental; urgency=low

  * Use Compress::Zlib and Compress::Bzip2 to create bzip2 and gzip Packages and
    Sources files.
    + Adding Depends of libcompress-bzip2-perl.
    + (Closes: #502454)
  * Drop liblinux-inotify2-perl to Recommends. It is not necessary to use
    inotify and this would allow users of non-Linux ports of debian to use
    debpool.
  * Bumped libproc-daemon-perl up to depends.
    + Changed debpool to not check for existence of Proc::Daemon, since it will
      now be installed by default.
  * Write an entry about dependencies in the README.Debian file.
  * Rename config file from Config.pm to debpoolrc.

 -- Andres Mejia <mcitadel@gmail.com>  Thu, 16 Oct 2008 16:55:37 -0400

debpool (0.3.7) experimental; urgency=low

  * Removed unnecessary comments from debian/rules.
  * Removed libcompress-zlib-perl from Recommends. It is not used.
  * Removed libdigest-sha-perl from Recommends as it is provided in perl-5.10.0.
  * Rewrote (slightly) package description.
  * Updated TODO file.

 -- Andres Mejia <mcitadel@gmail.com>  Thu, 16 Oct 2008 12:29:13 -0400
