@@ -2,8 +2,9 @@ debpool (0.4.0) experimental; urgency=low
 
   * Created a new module to handle file parsing (NOT YET COMPLETE).
   * Minor code cleanup.
+  * Add target in debian/rules to generate the MANIFEST file.
 
- -- Andres Mejia <mcitadel@gmail.com>  Fri, 24 Oct 2008 03:26:34 -0400
+ -- Andres Mejia <mcitadel@gmail.com>  Fri, 24 Oct 2008 12:15:30 -0400
 
 debpool (0.3.10) experimental; urgency=low
 
